tests/ui/derived_res_no_ref_unit.stderr
error[E0277]: the trait bound `Baz: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_res_no_ref_unit.rs:22:1
   |
22 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Baz`
   |
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BazUnit: quantities::LinearScaledUnit` is not satisfied
   --> tests/ui/derived_res_no_ref_unit.rs:22:1
    |
22  | #[quantity(Foo * Bar)]
    | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::LinearScaledUnit` is not implemented for `BazUnit`
    |
note: required by a bound in `quantities::HasRefUnit`
   --> src/lib.rs
    |
    |     <Self as Quantity>::UnitType: LinearScaledUnit,
    |                                   ^^^^^^^^^^^^^^^^ required by this bound in `quantities::HasRefUnit`
    = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Baz: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_res_no_ref_unit.rs:22:1
   |
22 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Baz`
   |
   = note: required because of the requirements on the impl of `std::ops::Div<Bar>` for `Baz`
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Baz: quantities::HasRefUnit` is not satisfied
  --> tests/ui/derived_res_no_ref_unit.rs:22:1
   |
22 | #[quantity(Foo * Bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `quantities::HasRefUnit` is not implemented for `Baz`
   |
   = note: required because of the requirements on the impl of `std::ops::Div<Foo>` for `Baz`
   = help: see issue #48214
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)
